Fix:moreボタンのz-indexを調整
背景に画像を使ったセクションで丸が見えなくなってしまったためz-nidexを一つあげた

--- a/_assets/scss/object/component/_button.scss
+++ b/_assets/scss/object/component/_button.scss
@@ -134,8 +134,9 @@
       height: 51px;
     }
     &--border {
+      z-index: 1;
       border: 2px solid global.$color-accent-yellow;
-    background-color: transparent;
+      background-color: transparent;
     }
   }
 }
